--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,11 @@
     <color name="verde">#4CAF50</color> />
     <color name="gris">#333333</color>
     <color name="cardShadowColor">#B0B0B0</color>
-    <color name="mora">#6200EE</color>
+    <color name="mora">#1B4F23</color>
     <color name="gray">#808080</color>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#388E3C</color>
+    <color name="colorPrimary">#2C6B2F</color> <!-- Verde oscuro -->
+    <color name="colorPrimaryDark">#1B4F23</color> <!-- Verde mucho más oscuro -->
+
     <color name="colorAccent">#43A047</color>
     <color name="tableRowBackground">#FFFFFF</color>
     <color name="tableTextColor">#000000</color>
@@ -21,8 +22,8 @@
     <color name="cardBackgroundColor">#FFFFFF</color>
     <color name="lavender">#8B652F</color>
     <color name="purple_200">#BB86FC</color>
-    <color name="purple_500">#6200EE</color>
-    <color name="purple_700">#3700B3</color>
+    <color name="purple_500">#1B4F23</color>
+    <color name="purple_700">#1B4F23</color>
     <color name="teal_200">#03DAC5</color>
     <color name="teal_700">#018786</color>
 
