--- a/app/src/main/res/layout/fragment_ag_perfil_agricultor.xml
+++ b/app/src/main/res/layout/fragment_ag_perfil_agricultor.xml
@@ -8,40 +8,19 @@
     android:background="#FFFFFF"
     tools:context="ui.AgPerfilAgricultorFragment">
 
-    <!-- Barra superior -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="60dp"
-            android:layout_height="70dp"
-            android:src="@drawable/logo"
-            android:contentDescription="Logo"
-            android:layout_gravity="start"
-            android:padding="8dp" />
-    </androidx.appcompat.widget.Toolbar>
-    <!-- Cultivo principal -->
 
     <ImageView
         android:id="@+id/profile_picture"
         android:layout_width="155dp"
         android:layout_height="176dp"
-        android:layout_marginTop="52dp"
         android:contentDescription="Foto del agricultor"
         android:padding="8dp"
         android:src="@drawable/agricultor_perfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        tools:layout_editor_absoluteY="122dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv_name"
