--- a/app/src/main/res/layout/fragment_cli_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_cli_editar_perfil.xml
@@ -45,14 +45,6 @@
                 tools:src="@tools:sample/avatars" />
 
             <!-- Botón de seleccionar archivo -->
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_gravity="center"
-                android:backgroundTint="#2E7D32"
-                android:text="@string/ep_btn_sele"
-                android:textColor="#FFFFFF" />
 
             <!-- Campos de texto y botones adicionales -->
             <TextView
@@ -60,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="@string/epu_nameuser"
+                android:text="Nombre"
                 android:textSize="18sp"/>
 
             <EditText
@@ -99,40 +91,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@android:drawable/edit_text"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:layout_marginBottom="40sp"/>
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="@string/ep_can"
-                android:textSize="18sp"/>
-
-            <EditText
-                android:id="@+id/insertCantidad"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@android:drawable/edit_text"
-                android:inputType="number" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="@string/epu_cont"
-                android:textSize="18sp"/>
-
-            <EditText
-                android:id="@+id/InsertNewContraseña"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@android:drawable/edit_text"
-                android:gravity="top"
-                android:inputType="textPassword" />
 
             <Button
                 android:id="@+id/btnActualizarUsuario"
@@ -143,10 +104,11 @@
                 android:backgroundTint="#F9A825"
                 android:drawableEnd="@drawable/baseline_save_24"
                 android:text="@string/epu_btn_a"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:layout_marginBottom="10sp"/>
 
             <Button
-                android:id="@+id/btnCancelActulizar"
+                android:id="@+id/btnCancelActualizar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
