--- a/app/src/main/res/menu/nav_menu_agricultor.xml
+++ b/app/src/main/res/menu/nav_menu_agricultor.xml
@@ -27,7 +27,7 @@
     <item android:title="Administracion">
         <menu>
             <item
-                android:id="@+id/nav_newProduct_agricultor"
+                android:id="@+id/agNuevoProductoFragment"
                 android:icon="@drawable/baseline_add_24"
                 android:title="Agregar Producto"/>
 
@@ -51,7 +51,7 @@
         android:title="Sistema">
         <menu>
             <item
-                android:id="@+id/nav_logout"
+                android:id="@+id/loginFragment"
                 android:icon="@drawable/baseline_exit_to_app_24"
                 android:title="Cerrar Sesión"/>
         </menu>
