--- a/app/src/main/res/layout/fragment_home_agricultor.xml
+++ b/app/src/main/res/layout/fragment_home_agricultor.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp"
     android:background="#F1F8E9"
-    tools:context="ui.HomeAgricultor">
+    tools:context=".ui.HomeAgricultorFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
