--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#009846</color>
     <color name="gold">#EFB810</color>
+    <color name="green">#009846</color>
+    <color name="red">#FF5733</color>
+
     <color name="verde">#4CAF50</color> />
     <color name="gris">#333333</color>
     <color name="cardShadowColor">#B0B0B0</color>
